--- a/app/templates/cron.html
+++ b/app/templates/cron.html
@@ -3,7 +3,7 @@
 <form action="" method="post" name="cron_feed">
 	{{form.hidden_tag()}}
 	<p>
-	Enter a time to feed: {{form.name(size=80)}}<br>
+	Enter a name for this: {{form.name(size=80)}}<br>
 	</p>
 	<p><input type="submit" value="Submit"></p>
 </form>	
