--- a/app/templates/led.html
+++ b/app/templates/led.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<head>
-	<title>Current Status></title>
-</head>
+{% extends "base.html" %}
+{% block content %}
+<h1> The LED is:</h1>
 
-<body>
-	<h1> The LED is:</h1>
-
-	<p> 
-	{% if action == "on" %}
-		is on (<a href="/led/off">turn off</a>)
-	{% else %}
-		is off (<a href="/led/on">turn on</a>)
-	{% endif %}
-	</p>
-</body>
-</html>
+<p> 
+{% if action == "on" %}
+	is on (<a href="/led/off">turn off</a>)
+{% else %}
+	is off (<a href="/led/on">turn on</a>)
+{% endif %}
+</p>
+{% endblock %}
