--- a/app/templates/cron.html
+++ b/app/templates/cron.html
@@ -1,10 +1,14 @@
+{% extends "base.html" %}
 {% block content %}
 <h1>Create a recurring feed</h1>
 <form action="" method="post" name="cron_feed">
 	{{form.hidden_tag()}}
 	<p>
-	Enter a name for this: {{form.name(size=80)}}<br>
-	</p>
+		Enter a name for this: {{form.name(size=80)}}<br>
+		{% for error in form.errors.name %}
+		<span style="color: red;">[{{error}}]</span>
+		{% endfor %} <br>
+		</p>
 	<p><input type="submit" value="Submit"></p>
 </form>	
 {% endblock %}
