working with databases, appears to be okay now
working also on login stuff, more work to do

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base2.html" %}
 {% block content %}
 <h1> Hiiii world</h1>
 <h2> The date and time on this Pi is : {{ time }}</h2>
