--- a/app/templates/users/register.html
+++ b/app/templates/users/register.html
@@ -1,8 +1,8 @@
-{% extends "html.base" %}
+{% extends "base2.html" %}
 {% block content %}
-    {% form "forms/macros.html" import render_field %}
+    {% from "forms/macros.html" import render_field %}
     <form method="POST" action="." class="form">
-        {{ form.csrf.token }}
+        {{ form.csrf_token }}
         {{ render_field(form.name, class="input text") }}
         {{ render_field(form.email, class="input text") }}
         {{ render_field(form.password, class="input text") }}
